--- a/index.html
+++ b/index.html
@@ -3,47 +3,67 @@
   <head>
     <meta charset="utf-8">
     <title>Project 5</title>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
+
+      <script id="chart" type="text/x-handlebars-template" id="majorTemplate">
+      </script>
+
+      <!-- declare handlebars -->
+
+
+      <table class="table table-striped">
+         <tr><th>Name</th><th>Major</th><th>Midterm</th><th>Final</th></tr>
+         {{#each rows}}
+            <tr>
+               <td>{{name}}</td><td>{{major}}</td><td>{{midterm}}</td><td>{{final}}</td>
+            </tr>
+         {{/each}}
+      </table>
+   </script>
+
+   <!-- handlebars template -->
+
+
   </head>
   <body style='margin-left: 30px;'>
 
-    <h1>Select a Major</h1>
-    <input type="button" name="btn1" value="CIT Majors">
-    <input type="button" name="btn2" value="Business Majors">
-    <h2>We filter our dataset by major</h2>
+    <div class="container">
+
+      <div id="majorTable"></div>
+
+        <h1>Select a Major</h1>
+
+          <button type='button' class="btn btn-primary" onClick="getData('CIT')">CIT Majors</button>
+          <button type='button' class="btn btn-primary" onClick="getData('BUS')">Business Majors</button>
+
+        <h2>We filter our dataset by major</h2>
+
+    </div>
   </body>
 
-  <script>
+  <!-- html displayed stuff -->
 
-      document.addEventListener('DOMContentLoaded', function() {
+<script>
+async function getData(selectedMajor) {
+    var response = await fetch('cit5students.json');   // this is a GET request
 
-      	document.querySelector('#btn').onclick = async function(){
-  			var response = await fetch('cit5students.json');       
+    if(response.ok) {
+        var data = await response.json();
 
-  			if(response.ok) {
-  				var data = await response.json();
+        // filter data array for the selected meal
+        majorData = data.filter( (item) => item.name == selectedMajor );  
 
+       var templateText = document.getElementById('majorTemplate').innerHTML;
+       var compiledTemplateText = Handlebars.compile(templateText);   // get and compile template code
+       compiledHtml = compiledTemplateText({ rows: majorData })      // apply data to template
+       document.getElementById('majorTable').innerHTML = compiledHtml;
+    }
+    else {
+       document.querySelector('#majorTable').innerHTML = "There was an error, or menu items not found";
+    }
 
-  				var tableContents = "<table cellspacing='5'>"
-  				tableContents += "<tr><td>Name</td><td>Midterm</td><td>Final</td></tr>";
-
-              	for(i = 0; i < data.length; i++) {
-                      tableContents += `<tr><td> ${data[i].name} </td>
-  						<td> ${data[i].midterm} </td>
-  						<td> ${data[i].final} </td></tr>`;  // generate table using template literals
-                  }
-
-                  tableContents += "</table>";
-
-                  document.querySelector('#result').innerHTML = tableContents;
-  			}
-  			else {
-  				document.querySelector('#result').innerHTML = "Data not found";
-  			}
-      	};
-
-    	});
-
-  </script>
+}
+</script>
 
 
 
