--- a/index.html
+++ b/index.html
@@ -45,32 +45,6 @@
 
     <!-- handlebars template -->
 
-    <script>
-    async function getData(selectedMajor) {
-        var response = await fetch('cit5students.json');   // this is a GET request
-
-        if(response.ok) {
-            var data = await response.json();
-
-            // filter data array for the selected meal
-            majorData = data.filter( (item) => item.name == selectedMajor );
-
-           var templateText = document.getElementById('majorTemplate').innerHTML;
-           var compiledTemplateText = Handlebars.compile(templateText);   // get and compile template code
-           compiledHtml = compiledTemplateText({ rows: majorData })      // apply data to template
-           document.getElementById('majorTable').innerHTML = compiledHtml;
-        }
-        else {
-           document.querySelector('#majorTable').innerHTML = "There was an error, or menu items not found";
-        }
-
-    }
-    </script>
-
-
-
-  </body>
-
-  <!-- html displayed stuff -->
-
+    <script src='app.js'></script>
+</body>
 </html>
