--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 
-      <script id="chart" type="text/x-handlebars-template" id="majorTemplate">
+      <script type="text/x-handlebars-template" id="majorTemplate">
 
       <!-- declare handlebars -->
 
