--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         <h1>Select a Major</h1>
 
-          <button type='button' class="btn btn-primary" onClick="getData("CIT")">CIT Majors</button>
-          <button type='button' class="btn btn-primary" onClick="getData("BUS")">Business Majors</button>
+          <button type='button' class="btn btn-primary" onClick="getData('CIT')">CIT Majors</button>
+          <button type='button' class="btn btn-primary" onClick="getData('BUS')">Business Majors</button>
 
         <h2>We filter our dataset by major</h2>
 
